## Process this file with automake to produce Makefile.in
bin_PROGRAMS = arcsim
arcsim_SOURCES = main.c \
				 arcsim.c \
				 arcsim_private.h \
				 datapath.c \
				 datapath_private.h \
				 index.c \
				 index_private.h \
				 memory.c \
				 memory_private.h \
				 processor.c \
				 processor_private.h \
				 rbtree.c \
				 rbtree_private.h
